--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Unity WebGL Player | StoryOfTomb</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/20200725_Web_StoryOfTomb.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/StoryOfTomb.json");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 1024px; height: 768px; margin: auto"></div>
+    <div id="gameContainer" style="width: 950px; height: 675px; margin: auto"></div>
   </body>
 </html>
